PyMaker/datas/object2/sample_RawHTML/i1/Python_DOC_referPages.convert-set-to-list-in-python.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/12453580/concatenate-item-in-list-to-strings">Concatenate item in list to strings</a>
<span class="question-originals-answer-count">
                    5 answers
                </span>
</li>
</ul>
</div>
<p>I'm converting a set to a list, and then to a string in Python. I can remove the brackets in the string output, but I also want to remove the quotes around the string.</p>
<p>This is what I tried:</p>
<pre><code> instance_list = ec2.describe_instances()
    for reservation in instance_list["Reservations"]:
            for instance in reservation.get("Instances", []):
                tree = objectpath.Tree(instance)
                private_ips =  set(tree.execute('$..PrivateIpAddress'))
                if len(private_ips) == 0:
                    private_ips = None
                if private_ips:
                private_ips_list = list(private_ips)
                private_ips_list = str(private_ips_list).replace('[','').replace(']','').replace('\','')
               else:
                   public_ips_list = None
</code></pre>
<p>This is the error I get:</p>
<pre><code>  File ".\aws_ec2_list_instances.py", line 64
    private_ips_list = str(private_ips_list).replace('[','').replace(']','').replace('\','')
                                                                                           ^
SyntaxError: EOL while scanning string literal
</code></pre>
<p>If I change the bottom line to this, without the final replace, the script works. </p>
<pre><code>private_ips_list = str(private_ips_list).replace('[','').replace(']','')
</code></pre>
<p>But the quotes are still there:</p>
<pre><code>Private IP: '10.48.136.41'
</code></pre>
<p>How can I remove the quotes from the output?</p>
</div>
<div class="post-text" itemprop="text">
<p>you can do:</p>
<pre><code>a = set(["Blah", "Hello"])
str1 = ''.join(a)
</code></pre>
</div>
<span class="comment-copy">An example input/output perhaps?</span>
<span class="comment-copy">This is not a run-time error, it's a syntax error. You have a missing quote somewhere.</span>
<span class="comment-copy"><code>.replace('\','')</code> is escaped incorrectly. It should be <code>'\''</code>.</span>
<span class="comment-copy">If you want a comma-separated list of set values, do so explicitly; don't abuse <code>list.__repr__</code> to do it. <code>', '.join(private_ips)</code>.</span>
<span class="comment-copy">I have a feeling that you're looking for <a href="https://docs.python.org/3/library/stdtypes.html#str.join" rel="nofollow noreferrer"><code>str.join</code></a>... but as it stands, the question is somewhat unclear.</span>
